[gd_scene load_steps=9 format=3 uid="uid://c75akqqigtmh6"]

[ext_resource type="Theme" uid="uid://bx2sev850e6ox" path="res://Themes/font-sm.tres" id="1_5vskn"]
[ext_resource type="Script" path="res://Components/CharStat/char_stat.gd" id="2_s07av"]
[ext_resource type="PackedScene" uid="uid://j6hvq4pejmsk" path="res://Components/ProgressBar/Bar.tscn" id="3_agmx0"]
[ext_resource type="Script" path="res://Components/ProgressBar/Bar.gd" id="4_374yh"]
[ext_resource type="SystemFont" uid="uid://xyiu7hatiaox" path="res://Assets/Fonts/new_system_font.tres" id="4_aix6m"]

[sub_resource type="SystemFont" id="SystemFont_01gd0"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_fgdh5"]
line_spacing = 0.0
font = SubResource("SystemFont_01gd0")
font_size = 9
outline_size = 2
outline_color = Color(0, 0.796078, 0.12549, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qmu4b"]
line_spacing = 0.0
font = SubResource("SystemFont_01gd0")
font_size = 9
outline_size = 2
outline_color = Color(0, 0.431373, 0.454902, 1)

[node name="char_stat" type="VBoxContainer"]
offset_right = 187.0
offset_bottom = 76.0
theme = ExtResource("1_5vskn")
script = ExtResource("2_s07av")

[node name="h_box_container2" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="battle_control" type="BoxContainer" parent="h_box_container2"]
unique_name_in_owner = true
layout_mode = 2

[node name="esc" type="Button" parent="h_box_container2/battle_control"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("4_aix6m")
theme_override_font_sizes/font_size = 9
text = "Escape"

[node name="hp_container" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="hp_bar" parent="hp_container" instance=ExtResource("3_agmx0")]
unique_name_in_owner = true
self_modulate = Color(1, 0.270588, 0.270588, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="hp_value" type="Label" parent="hp_container/hp_bar"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
offset_left = 7.0
offset_right = 47.0
offset_bottom = 13.0
size_flags_horizontal = 3
text = "0/0"
label_settings = SubResource("LabelSettings_fgdh5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="mp_bar" parent="hp_container" instance=ExtResource("3_agmx0")]
unique_name_in_owner = true
self_modulate = Color(0, 0.686275, 1, 1)
layout_mode = 2
size_flags_vertical = 3

[node name="mp_value" type="Label" parent="hp_container/mp_bar"]
unique_name_in_owner = true
clip_contents = true
layout_mode = 2
offset_left = 7.0
offset_right = 47.0
offset_bottom = 13.0
size_flags_horizontal = 3
text = "0/0"
label_settings = SubResource("LabelSettings_qmu4b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="h_box_container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="exp_bar" type="ProgressBar" parent="h_box_container"]
unique_name_in_owner = true
modulate = Color(1, 0.823529, 0.470588, 1)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_font_sizes/font_size = 6
script = ExtResource("4_374yh")

[node name="lvl" type="Label" parent="h_box_container"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "LV:0"
horizontal_alignment = 1
vertical_alignment = 1
